--- a/ZdrowySpacer/ZdrowySpacer/ZdrowySpacer.iOS/ZdrowySpacer.iOS.csproj
+++ b/ZdrowySpacer/ZdrowySpacer/ZdrowySpacer.iOS/ZdrowySpacer.iOS.csproj
@@ -133,4 +133,19 @@
       <Name>ZdrowySpacer</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_wybierz_norme.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_wyniki.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_zdjecia.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_mapa.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_strona_glowna.png" />
+  </ItemGroup>
 </Project>
